NEWS for the QuakeForge project
-------------------------------

Changes from 0.5.2

    o General enhancements.
        * MVD playback in the qw clients.
        * MVD recording in the qw server.
        * sv_maxrate changes now take effect immediately rather than when
          clients (re)connect or change their rate
        * segfault when using "snd_output null" fixed

    o qfcc enhancements.
        * @argc and @argv deprecated in favor of @args.count and @args.list
          (@args is a struct with type @va_list)
        * structure copy
        * -L lib search paths and -l now behaves in a more expected manner
        * default search paths for includes and libs

    o Progs engine enhancements.
        * arbitrary size data copying

Changes from 0.3.0

    o General enhancements.
        * NQ (quake1, single player, NetQuake, WinQuake) is back.
        * Video (driver and renderer), audio, gamecode (progs), console,
          model loading and general utility code shared in common libs between
          NQ and QW
        * Plugin system for sound and cd drivers.
        * Ogg Vorbis compression for sound effect samples (streamed ogg support
          is planned).
        * Menu system re-written in QuakeC/Ruamoko
        * Curses console for servers in Unix.
        * New key binding system.

    o Progs engine enhancements.
        * Fully modular. Mod/Server-independent, allowing for
          stand-alone QuakeC interpreter and client-side code.
        * The engine is no longer dependent on progdefs.h. This makes
          QuakeForge have trouble with QuakeC compilers that strip
          symbol names -- but those can be repaired using the new
          "qfdefs" tool.
        * New basic types, and instructions for using them, for version
          0.fff.002 progs (Quake's Version 6 is still supported).
        * Better dynamic string handling. Dynamic strings are
          garbage-collected.